--- a/Bingo Generator.ipynb
+++ b/Bingo Generator.ipynb
@@ -99,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k = 100000\n",
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -230,39 +232,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "V 36\n",
       "E 43\n",
-      "L 8\n",
-      "V 32\n",
-      "O 23\n",
-      "O 17\n",
-      "V 34\n",
-      "O 22\n",
-      "O 13\n",
-      "L 1\n",
+      "L 5\n",
+      "V 29\n",
       "L 3\n",
-      "O 20\n",
-      "V 26\n",
+      "L 10\n",
       "L 7\n",
-      "E 44\n",
-      "V 28\n",
-      "O 24\n",
-      "O 16\n",
-      "V 33\n",
-      "L 9\n",
-      "E 48\n",
-      "V 30\n",
-      "V 31\n",
-      "E 47\n",
+      "L 6\n",
+      "E 45\n",
+      "L 12\n",
+      "V 32\n",
       "L 11\n",
-      "E 39\n",
-      "E 45\n"
+      "E 38\n",
+      "O 19\n",
+      "L 4\n",
+      "O 17\n",
+      "E 47\n",
+      "O 23\n",
+      "E 41\n",
+      "E 44\n",
+      "L 9\n",
+      "O 22\n",
+      "O 14\n",
+      "V 25\n",
+      "V 28\n",
+      "V 35\n"
      ]
     }
    ],
